--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,8 @@ plugins {
     id("androidx.navigation.safeargs.kotlin")
 }
 apply plugin: 'kotlin-android'
+def gMapApi = project.properties['GOOGLE_MAPS_API_KEY'] ?: System.getenv('GOOGLE_MAPS_API_KEY')
+
 def mapboxApiToken = project.properties['MAPBOX_ACCESS_TOKEN'] ?: System.getenv('MAPBOX_ACCESS_TOKEN')
 def hereApiId = project.properties['SDK_APP_ID'] ?: System.getenv('SDK_APP_ID')
 def hereApiCode = project.properties['SDK_APP_CODE'] ?: System.getenv('SDK_APP_CODE')
@@ -32,6 +34,12 @@ android {
         vectorDrawables.useSupportLibrary = true
         // testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         testInstrumentationRunner "com.openclassrooms.realestatemanager.HiltTestRunner"
+
+       buildConfigField "String", "MAPS_API_KEY", "\"$gMapApi\""
+        resValue "string", "google_maps_key",
+                (project.findProperty("GOOGLE_MAPS_API_KEY") ?: "")
+
+        resValue "string", "mapbox_access_token", mapboxApiToken
 
         buildConfigField "String", "MAPBOX_API_TOKEN", "\"$mapboxApiToken\""
         resValue "string", "mapbox_access_token", mapboxApiToken
@@ -120,7 +128,9 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     implementation 'androidx.recyclerview:recyclerview:1.2.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
-    implementation 'androidx.fragment:fragment-ktx:1.3.3'
+    implementation 'androidx.fragment:fragment-ktx:1.3.4'
+
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
 
     implementation Google.material
     implementation Google.hilt_android
