--- a/app/build.gradle
+++ b/app/build.gradle
@@ -132,6 +132,15 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-location:18.0.0'
 
+    // Maps SDK for Android KTX Library
+    implementation 'com.google.maps.android:maps-ktx:3.0.0'
+
+    // Maps SDK for Android Utility Library KTX Library
+    implementation 'com.google.maps.android:maps-utils-ktx:3.0.0'
+
+    // Lifecycle Runtime KTX Library
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
+
     implementation Google.material
     implementation Google.hilt_android
 
