- add MapView instead of fragment in property_detail.xml - update PropertyDetailFragment.kt in order to have lite map with PropertyDetailFragment.kt location
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <uses-feature android:name="android.hardware.camera" />
 
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
@@ -67,23 +68,12 @@
         </provider>
 
         <meta-data
-            android:name="com.here.android.maps.appid"
-            android:value="${SDK_APP_ID}" />
-        <meta-data
-            android:name="com.here.android.maps.apptoken"
-            android:value="${SDK_APP_CODE}" />
-        <meta-data
-            android:name="com.here.android.maps.license.key"
-            android:value="${SDK_LICENSE_KEY}" />
-
-        <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="${MAPS_API_KEY}" />
-
 
     </application>
 
