- update AddPropertyFragment.kt changed the way to manage uploaded image
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,11 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        maven {
+            url 'https://zendesk.jfrog.io/zendesk/oss-releases-local'
+        }
+        maven { url 'https://jitpack.io' }
+
     }
     dependencies {
         def nav_version = "2.3.5"
