--- a/app/build.gradle
+++ b/app/build.gradle
@@ -250,7 +250,8 @@ dependencies {
     //Google Guava
     implementation("com.google.guava:guava:30.1.1-jre")
 
-
+    //Expandable Fab
+    implementation "com.nambimobile.widgets:expandable-fab:1.0.2"
 
 
 }
