- update PropertyDaoTest.kt insertAndGetUpdateAgent()
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -253,6 +253,10 @@ dependencies {
     //Expandable Fab
     implementation "com.nambimobile.widgets:expandable-fab:1.0.2"
 
+    //Faker for fake data
+    implementation 'com.github.javafaker:javafaker:1.0.2'
+
+
 
 }
 secrets {
