--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,10 +110,10 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:18.0.0'
 
     // Maps SDK for Android KTX Library
-    implementation 'com.google.maps.android:maps-ktx:3.0.0'
+    implementation 'com.google.maps.android:maps-ktx:3.0.1'
 
     // Maps SDK for Android Utility Library KTX Library
-    implementation 'com.google.maps.android:maps-utils-ktx:3.0.0'
+    implementation 'com.google.maps.android:maps-utils-ktx:3.0.1'
 
     // Lifecycle Runtime KTX Library
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
@@ -146,7 +146,7 @@ dependencies {
 
     //ViewPager Dots
     implementation 'com.tbuonomo:dotsindicator:4.2'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    //implementation "org.jetbrains.kotlin:kotlin-stdlib:1.5.10"
 
     def lifecycle_version = "2.3.1"
     def arch_version = "2.1.0"
@@ -208,14 +208,14 @@ dependencies {
     // Optional -- Robolectric environment
     testImplementation 'androidx.test:core:1.3.0'
     // Optional -- Mockito framework
-    testImplementation 'org.mockito:mockito-core:3.10.0'
+    testImplementation 'org.mockito:mockito-core:3.11.0'
 
     // Testing Dependencies
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
 
     androidTestImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0'
-    androidTestImplementation "org.mockito:mockito-android:3.10.0"
+    androidTestImplementation 'org.mockito:mockito-android:3.11.0'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'android.arch.core:core-testing:1.1.1'
@@ -230,12 +230,12 @@ dependencies {
 
     //Hilt
     // For Robolectric tests.
-    testImplementation 'com.google.dagger:hilt-android-testing:2.35.1'
+    testImplementation 'com.google.dagger:hilt-android-testing:2.36'
     // ...with Kotlin.
-    kaptTest 'com.google.dagger:hilt-android-compiler:2.35'
+    kaptTest 'com.google.dagger:hilt-android-compiler:2.36'
     // For instrumented tests.
-    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.35.1'
-    kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.35'
+    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.36'
+    kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.36'
 
 
     //Espresso
@@ -255,8 +255,6 @@ dependencies {
 
     //Faker for fake data
     implementation 'com.github.javafaker:javafaker:1.0.2'
-
-
 
 }
 secrets {
