--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,7 @@ android {
 }
 
 dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:1.1.5")
 
     implementation AndroidX.core_ktx
