--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ android {
         // testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         testInstrumentationRunner "com.openclassrooms.realestatemanager.HiltTestRunner"
 
-       buildConfigField "String", "MAPS_API_KEY", "\"$gMapApi\""
+        buildConfigField "String", "MAPS_API_KEY", "\"$gMapApi\""
         resValue "string", "google_maps_key",
                 (project.findProperty("GOOGLE_MAPS_API_KEY") ?: "")
         kapt {
@@ -57,7 +57,6 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
-        coreLibraryDesugaringEnabled true
     }
     kotlinOptions {
         jvmTarget = Versions.jvmTarget
@@ -77,7 +76,6 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:1.1.5")
 
     implementation AndroidX.core_ktx
@@ -112,10 +110,10 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:18.0.0'
 
     // Maps SDK for Android KTX Library
-    implementation 'com.google.maps.android:maps-ktx:3.0.1'
+    implementation 'com.google.maps.android:maps-ktx:3.0.0'
 
     // Maps SDK for Android Utility Library KTX Library
-    implementation 'com.google.maps.android:maps-utils-ktx:3.0.1'
+    implementation 'com.google.maps.android:maps-utils-ktx:3.0.0'
 
     // Lifecycle Runtime KTX Library
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
@@ -148,7 +146,7 @@ dependencies {
 
     //ViewPager Dots
     implementation 'com.tbuonomo:dotsindicator:4.2'
-    //implementation "org.jetbrains.kotlin:kotlin-stdlib:1.5.10"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     def lifecycle_version = "2.3.1"
     def arch_version = "2.1.0"
@@ -210,14 +208,14 @@ dependencies {
     // Optional -- Robolectric environment
     testImplementation 'androidx.test:core:1.3.0'
     // Optional -- Mockito framework
-    testImplementation 'org.mockito:mockito-core:3.11.0'
+    testImplementation 'org.mockito:mockito-core:3.10.0'
 
     // Testing Dependencies
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
 
     androidTestImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0'
-    androidTestImplementation 'org.mockito:mockito-android:3.11.0'
+    androidTestImplementation "org.mockito:mockito-android:3.10.0"
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'android.arch.core:core-testing:1.1.1'
@@ -232,12 +230,12 @@ dependencies {
 
     //Hilt
     // For Robolectric tests.
-    testImplementation 'com.google.dagger:hilt-android-testing:2.36'
+    testImplementation 'com.google.dagger:hilt-android-testing:2.35.1'
     // ...with Kotlin.
-    kaptTest 'com.google.dagger:hilt-android-compiler:2.36'
+    kaptTest 'com.google.dagger:hilt-android-compiler:2.35'
     // For instrumented tests.
-    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.36'
-    kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.36'
+    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.35.1'
+    kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.35'
 
 
     //Espresso
@@ -257,6 +255,8 @@ dependencies {
 
     //Faker for fake data
     implementation 'com.github.javafaker:javafaker:1.0.2'
+
+
 
 }
 secrets {
