--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,6 @@ plugins {
     id 'com.google.secrets_gradle_plugin' version '0.5'
     id("androidx.navigation.safeargs.kotlin")
 }
-apply plugin: 'kotlin-android'
 def gMapApi = project.properties['GOOGLE_MAPS_API_KEY'] ?: System.getenv('GOOGLE_MAPS_API_KEY')
 
 android {
@@ -48,6 +47,11 @@ android {
         viewBinding true
     }
 
+    dataBinding {
+        enabled = true
+        enabledForTests = true
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -74,8 +78,21 @@ android {
             includeAndroidResources = true
         }
     }
+    sourceSets {
+        debug {
+            java {
+                srcDirs 'src\\debug\\java'
+            }
+        }
+    }
 }
-
+kapt {
+    arguments {
+        // Make Hilt share the same definition of Components in tests instead of
+        // creating a new set of Components per test class.
+        arg("dagger.hilt.shareTestComponents", "true")
+    }
+}
 dependencies {
     coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:1.1.5")
 
@@ -230,7 +247,7 @@ dependencies {
 
     //Hilt
     // For Robolectric tests.
-    testImplementation 'com.google.dagger:hilt-android-testing:2.35.1'
+    testImplementation 'com.google.dagger:hilt-android-testing:2.36'
     // ...with Kotlin.
     kaptTest 'com.google.dagger:hilt-android-compiler:2.35'
     // For instrumented tests.
@@ -242,6 +259,15 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test:rules:1.3.0'
+    androidTestImplementation("androidx.navigation:navigation-testing:2.3.5")
+    debugImplementation 'androidx.fragment:fragment-testing:1.4.0-alpha02'
+
+    implementation "androidx.test.espresso:espresso-idling-resource:3.3.0"
+    androidTestImplementation "androidx.test.espresso.idling:idling-concurrent:3.3.0"
+    implementation "androidx.test.espresso:espresso-idling-resource:3.3.0"
+
+    //Robolectric
+    testImplementation "org.robolectric:robolectric:4.5.1"
 
 
     //Easier Permission
