--- a/app/build.gradle
+++ b/app/build.gradle
@@ -114,7 +114,7 @@ dependencies {
     implementation AndroidX.activity
 
     implementation("androidx.navigation:navigation-dynamic-features-fragment:2.3.5")
-
+    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.4.0-alpha02"
 
     implementation 'androidx.test:monitor:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
